* Add regex matching in log_badlogins and don't expect the callerid to always be in numeric format
* Small html corrections in user_toolbar.html.php3
* Add a HOWTO from Paris Stamatopoulos
* create a doc directory and move the documentation files there
* Add a note about the HOWTO in the README file
Ver 1.63:
* Do an eval on the attribute description strings in the user_edit page. That will allow the login-time creation
  page to work properly.
* Add a login-time creation page which will allow the administrator to create the login-time string through a gui
  instead of writing it directly in UUCP format.
* Call lib/{ldap,sql}/user_info in user_info before displaying any information about the user
* Add a configuration directive general_charset. Add a language meta tag in all pages
* Use sql_extra_servers directive when adding users in the badusers table. Add a da_sql_host_connect() function
  to connect to a specific sql host
* Fix a typo in lib/sql/attrmap.php3
* Add an entry in the FAQ about the Dialup-Access attribute
* Add an entry in the FAQ about duplicate personal attributes in the user_admin page
* Only show the personal attributes in the New User page if we have ldap or we are using the userinfo table in sql
* Add a per nas finger_type directive
* Update the TODO file
* Add an entry in the FAQ about adding .php3 handling
* Add a few installation notes
* Fix a problem with user_stats.php3
* Update the README file with notes about the scripts present in the bin folder
* Add a <?php tag instead of a <?. Bug noted by Isam Ishaq <isam@planet.edu>
* Add support for regexp and like operators in accounting report generator
* Limit the split() to 2 elements in lib/defaults.php3
* Create a AcctUniqueId before adding a row in radacct in log_badlogins.
* Use Max-Monthly-Session not Max-Weekly-Session for the monthly limit
* When checking the weekly limit check first that $remaining is numeric before doing any comparisons